cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode main.cpp src/stack/P_1006.cpp src/array/P_1143.cpp src/array/P_88.cpp src/array/P_80.cpp src/array/P_81.cpp src/array/P_153.cpp src/linkllist/ListNode.cpp src/linkllist/ListNode.h src/linkllist/P_2.cpp src/array/P_263.cpp src/array/P_264.cpp src/array/P_179.cpp src/binarytree/TreeNode.h src/binarytree/P_783.cpp src/str/P_9.cpp src/array/P_208.cpp src/dp/P_213.cpp)